# quickhull-rs

./: Cargo.toml  README.md
assets/: utah_teapot.glb
examples/: 3d_shapes.rs  shapes_3d.rs  utah_teapot.rs
src/: dim2.rs  dim3.rs  fixed_hasher.rs  lib.rs
src/dim3/: aabb.rs  initial_hull.rs  mod.rs  normalize.rs  tri_face.rs  triangle_face.rs  validation.rs
