[package]
name = "quickhull"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Quickhull algorithm for computing convex hulls"
readme = "README.md"
keywords = ["convex", "hull", "geo", "geometry"]
categories = ["algorithms", "mathematics", "game-development"]

[dependencies]
# Math
glam = "0.30"
glam_matrix_extras = "0.1"
robust = "1.1.0"
approx = "0.5"

# Hashing
foldhash = "0.2"
hashbrown = "0.16"

[dev-dependencies]
bevy = "0.17"
rand = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
